--- a/src/style.css
+++ b/src/style.css
@@ -16,16 +16,14 @@ body {
 }
 
 .sample-layout {
-    width: auto;
-    height: auto;
-  
-    margin: 5rem;
-
+    width: 90vw;
     display: grid;
-    grid-auto-rows: 1fr;
-    grid-template-columns: repeat(3, 25vw);
-    column-gap: .5rem;
-    row-gap: 3rem;
+
+    grid-template-columns: repeat(3, 20vw);
+    grid-template-rows: repeat(auto-fill, 25vw);
+
+    justify-content: center;
+    gap: 1rem;
 
     background: transparent;
 }
@@ -51,19 +49,12 @@ body {
     border: none;
 
     overflow: hidden;
-
-    /* border-radius: 1rem; */
 }
 
 .sample::before {
     content: counter(sample, decimal-leading-zero);
 
     color: aliceblue;
-}
-
-.chart-example {
-    width: 100%;
-    height: 100%;
 }
 
 .chart-example {
@@ -85,5 +76,5 @@ body {
     padding-right: 1rem;
     display: flex;
 
-    font-size: 1.2vw;
+    font-size: clamp(.5rem, 1vw, 1rem);
 }
