--- a/src/style.css
+++ b/src/style.css
@@ -1,80 +1,81 @@
 html,
 body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    /* overflow: hidden; */
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  /* overflow: hidden; */
 
-    overflow-x: hidden;
+  overflow-x: hidden;
 
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: rgb(67, 67, 67);
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-color: rgb(67, 67, 67);
 }
 
 .sample-layout {
-    width: 90vw;
-    display: grid;
+  width: 90vw;
+  display: grid;
 
-    grid-template-columns: repeat(3, 20vw);
-    grid-template-rows: repeat(auto-fill, 25vw);
+  grid-template-columns: repeat(3, 20vw);
+  grid-template-rows: repeat(auto-fill, 25vw);
 
-    justify-content: center;
-    gap: 1rem;
+  justify-content: center;
+  gap: 1rem;
 
-    background: transparent;
+  background: transparent;
 }
 
 .sample {
-    counter-increment: sample;
-    background-color: transparent;
-    aspect-ratio: 1 / 1;
+  counter-increment: sample;
+  background-color: transparent;
+  aspect-ratio: 1 / 1;
 
-    position: relative;
+  position: relative;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: .5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .sample > iframe {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 
-    border: none;
+  border: none;
 
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .sample::before {
-    content: counter(sample, decimal-leading-zero);
+  content: counter(sample, decimal-leading-zero);
 
-    color: aliceblue;
+  color: aliceblue;
 }
 
 .chart-example {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .chart {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .explanation {
-    background-color: rgb(90, 90, 90);
-    color: white;
-    border-radius: 1rem;
+  background-color: rgb(90, 90, 90);
+  color: white;
+  border-radius: 1rem;
 
-    padding-left: 1rem;
-    padding-right: 1rem;
-    display: flex;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  display: flex;
 
-    font-size: clamp(.5rem, 1vw, 1rem);
+  font-size: clamp(0.5rem, 1vw, 1rem);
 }
