--- a/public/styles/search/search.css
+++ b/public/styles/search/search.css
@@ -55,6 +55,8 @@ dialog {
 
   justify-content: center;
   align-items: start;
+
+  overflow: hidden;
 }
 
 dialog[open] {
@@ -65,12 +67,14 @@ dialog::backdrop {
   background-color: transparent;
 }
 
-dialog-column {
+.dialog-column {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
+
+  height: 100%;
 }
 
 .dialog-row {
@@ -150,4 +154,28 @@ dialog-column {
 
 button {
   display: contents;
+}
+
+.sample-layout {
+  height: 100%;
+  padding-right: 1rem;
+
+  overflow-y: auto;
+}
+
+.sample {
+  display: none;
+  flex-direction: column-reverse;
+  align-items: center;
+
+  aspect-ratio: 1 / 1;
+}
+
+.sample > iframe {
+  width: 100%;
+  height: 100%;
+
+  border: none;
+
+  overflow: hidden;
 }
