--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -11,13 +11,12 @@ body {
   display: flex;
   justify-content: center;
 
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family:
+    "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   background-color: rgb(67, 67, 67);
 }
-
 .sample-layout {
-  width: 90vw;
+  /*width: 90vw;*/
   display: grid;
 
   grid-template-columns: repeat(3, 20vw);
@@ -30,6 +29,9 @@ body {
 }
 
 .sample {
+  width: 100%;
+  height: 100%;
+
   counter-increment: sample;
   background-color: transparent;
   aspect-ratio: 1 / 1;
@@ -56,16 +58,6 @@ body {
   content: counter(sample, decimal-leading-zero);
 
   color: aliceblue;
-}
-
-.chart-example {
-  width: 100%;
-  height: 100%;
-}
-
-.chart {
-  width: 100%;
-  height: 100%;
 }
 
 .explanation {
