--- a/public/styles/sample.css
+++ b/public/styles/sample.css
@@ -17,3 +17,20 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.pre-log {
+  /*opacity: 0.1;*/
+  height: 90vh;
+  overflow-y: hidden;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: rgba(255, 255, 255, 0.48);
+  background-color: rgba(0, 157, 255, 0.11);
+
+  margin: 1rem;
+  padding: 1rem;
+
+  border-radius: 1rem;
+}
